2006-01-18  Nate Nielsen  <nielsen@memberwebs.com>

	* libseahorse/seahorse-hkp-source.c: Fix build problem in 
	non-debug builds
	* libseahorse/seahorse-pgp-source.c: Clarify gnome-vfs monitor warning
	
2006-01-12  Nate Nielsen  <nielsen@memberwebs.com>

    * autogen.sh: Require automake 1.7 or later.
    * agent/gtk-secure-entry.c: Fix GTK warning.
    * agent/seahorse-agent-prompt.c: Use gtk_window_present to get users
    attention to prompt and auth windows.
    * libseahorse/seahorse-widget.c: Fix dumb g_free of a GObject. 
    Fixes bug #325804
    
2005-11-04  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h: Fix HKP support for sks_www
    keyserver. ie: keyserver.ubuntu.com (bug #320708)

2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in:
	* bonobo/Makefile.am:
	* libseahorse/Makefile.am:
	* plugins/gedit/Makefile.am:
	* plugins/nautilus-ext/Makefile.am: Fixes to build under 
	the cygwin platform. Patch from yselkowitz@users.sourceforge.net
	(bug #318590)
	* agent/Makefile.am: Be able to install in an alternat $DESTIR
	(bug #318070)
	* libseahorse/seahorse-util.c: Don't display error for cancelled.
	operations (bug #318257)
	
2005-10-06  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in: Allow any GPGME 1.x.x
	
2005-10-06  Nate Nielsen  <nielsen@memberwebs.com>

	* Version 0.8
	* AUTHORS:
	* HACKING:
	* INSTALL:
	* NEWS:
	* README:
	* README.cvs:
	* TODO: Updated for stable release
	* configure.in: Updated version to 0.8.1
	
2005-10-04  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.in: Added ne in ALL_LINGUAS

2005-09-19  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in: Now works with gedit 2.12. Patch from 
	Mike Gardiner. (bug #316607)
	
2005-08-26  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-io.c: Fixed crasher when used