@@ -350,6 +350,7 @@ else
 	AC_DEFINE_UNQUOTED(WITH_AGENT, 1, [Compile password caching 'agent' code])
 fi
 
+dnl ************************
 
 # Debug mode
 AC_ARG_ENABLE(debug, 
@@ -369,6 +370,11 @@ AC_SUBST(SEAHORSE_CFLAGS)
 AC_SUBST(SEAHORSE_LIBS)
 
 AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
+
+AC_ARG_ENABLE(update-mime-database,
+	AC_HELP_STRING([--disable-update-mime-database],
+	[do not run the update-mime-database utility (mostly useful for package maintainers) ]))
+AM_CONDITIONAL(UPDATE_MIME_DATABASE, test "$enable_update_mime_database" != "no")
 
 dnl *******************
 dnl ***** gettext *****
