@@ -1,5 +1,11 @@
 2006-01-18  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * configure.in:
+    * plugins/nautilus/Makefile.am: Add --disable-update-mime-database
+    option. Patch by <dmacks@netspace.org> .Fixes bug #327449
+
+2006-01-18  Nate Nielsen  <nielsen@memberwebs.com>
+
 	* libseahorse/seahorse-hkp-source.c: Fix build problem in 
 	non-debug builds
 	* libseahorse/seahorse-pgp-source.c: Clarify gnome-vfs monitor warning
